# IFCPlusPlusArchiv2

./: .gitignore  CMakeLists.txt  README.md
Carve/: CMakeLists.txt
Carve/src/include/carve/: config.h
IfcPlusPlus/: CMakeLists.txt
IfcPlusPlus/src/ifcpp/geometry/: GeometryConverter.h  GeometryInputData.h  GeometrySettings.h  RepresentationConverter.h  SceneGraphUtils.h  SolidModelConverter.h
IfcPlusPlus/src/ifcpp/geometry/Carve/: GeomUtils.h
IfcPlusPlus/src/ifcpp/model/: StatusCallback.h
IfcPlusPlus/src/ifcpp/reader/: IfcPPReaderSTEP.cpp
IfcPlusPlusGeometry/: CMakeLists.txt
IfcPlusPlusGeometry/src/ifcppgeometry/: CSG_Adapter.cpp  CSG_Adapter.h  GeomDebugUtils.h  GeometryInputData.cpp  GeometrySettings.cpp  GeometrySettings.h  ProfileConverter.cpp  ReaderWriterIFC.cpp  ReaderWriterIFC.h  RepresentationConverter.cpp  RepresentationConverter.h  SolidModelConverter.cpp
SimpleViewer/: CMakeLists.txt
SimpleViewer/Resources/: ifcplusplus.qrc
SimpleViewer/Resources/img/: OpenIfcFile.xcf
SimpleViewer/src/: main.cpp
SimpleViewer/src/gui/: MainWindow.cpp  MainWindow.h
SimpleViewerExample/: CMakeLists.txt
SimpleViewerExample/src/: ViewController.cpp  main.cpp
SimpleViewerExample/src/gui/: MainWindow.cpp  TabReadWrite.cpp
SimpleViewerExample/src/viewer/: ViewerWidget.cpp
